5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4014/executions/1662_2975.log
== TEST (2019-04-15 14:22:31) 
-- CODE:
var1=int(input("a quantidade de sucos:"))
var2=int(input("a quantidade de salgados:"))
var3=float(input("o valor que voces tem diponivel:"))
suco=(3)
salgado=(3,50)
if((var1*suco)+(var2*salgado)==var3):
	msg="Sim"
else:
	msg="Nao"
print(round(x e y, 2)

-- ERROR:
File "XXXX", line 10
    print(round(x e y, 2)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:23:00) 
-- CODE:
var1=int(input("a quantidade de sucos:"))
var2=int(input("a quantidade de salgados:"))
var3=float(input("o valor que voces tem diponivel:"))
suco=(3)
salgado=(3,50)
if((var1*suco)+(var2*salgado)==var3):
	msg="Sim"
else:
	msg="Nao"
print(round(x , y, 2)

-- ERROR:
File "XXXX", line 11
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:23:38) 
-- CODE:
var1=int(input("a quantidade de sucos:"))
var2=int(input("a quantidade de salgados:"))
var3=float(input("o valor que voces tem diponivel:"))
suco=(3)
salgado=(3,50)
if((var1*suco)+(var2*salgado)==var3):
	msg="Sim"
else:
	msg="Nao"
print(round(msg, 2)

-- ERROR:
File "XXXX", line 11
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:23:52) 
-- CODE:
var1=int(input("a quantidade de sucos:"))
var2=int(input("a quantidade de salgados:"))
var3=float(input("o valor que voces tem diponivel:"))
suco=(3)
salgado=(3,50)
if((var1*suco)+(var2*salgado)==var3):
	msg="Sim"
else:
	msg=
print(round(msg, 2)

-- ERROR:
File "XXXX", line 9
    msg=
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:24:13) 
-- CODE:
var1=int(input("a quantidade de sucos:"))
var2=int(input("a quantidade de salgados:"))
var3=float(input("o valor que voces tem diponivel:"))
suco=(3)
salgado=(3,50)
if(var1*suco)+(var2*salgado):
	msg="Sim"
else:
	msg=
print(round(msg, 2)

-- ERROR:
File "XXXX", line 9
    msg=
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:25:30) 
-- CODE:
var1=int(input("a quantidade de sucos:"))
var2=int(input("a quantidade de salgados:"))
var3=float(input("o valor que voces tem diponivel:"))
x=(3)
y=(3,50)
if(var1*x)+(var2*y):
	msg="Sim"
else:
	msg=
print(round(x,y), 2)

-- ERROR:
File "XXXX", line 9
    msg=
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:26:33) 
-- CODE:
var1=int(input("a quantidade de sucos:"))
var2=int(input("a quantidade de salgados:"))
var3=float(input("o valor que voces tem diponivel:"))
x=(3)
y=(3,50)
if(var1+var2):
	msg="Sim"
else:
	msg=
print(round(x,y), 2)

-- ERROR:
File "XXXX", line 9
    msg=
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:27:11) 
-- CODE:
var1=int(input("a quantidade de sucos:"))
var2=int(input("a quantidade de salgados:"))
var3=float(input("o valor que voces tem diponivel:"))
x=3
y=3,50
if(var1+var2):
	msg="Sim"
else:
	msg=
print(round(x,y), 2)

-- ERROR:
File "XXXX", line 9
    msg=
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:27:52) 
-- CODE:
var1=int(input("a quantidade de sucos:"))
var2=int(input("a quantidade de salgados:"))
var3=float(input("o valor que voces tem diponivel:"))
x=3
y=3,50
if(var1+var2):
	msg="Sim"
else:
	msg=
print(round(x,y, 2))

-- ERROR:
File "XXXX", line 9
    msg=
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:28:25) 
-- CODE:
var1=int(input("a quantidade de sucos:"))
var2=int(input("a quantidade de salgados:"))
var3=float(input("o valor que voces tem diponivel:"))
x=3
y=3,50
if(var1+var2):
	msg="Sim"
else:
	msg=
print(round(var1,var2, 2))

-- ERROR:
File "XXXX", line 9
    msg=
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:28:37) 
-- CODE:
var1=int(input("a quantidade de sucos:"))
var2=int(input("a quantidade de salgados:"))
var3=float(input("o valor que voces tem diponivel:"))
x=3
y=3,50
if(var1+var2):
	msg="Sim"
else:
	msg=
print(round(msg, 2))

-- ERROR:
File "XXXX", line 9
    msg=
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:41:55) 
-- CODE:
var1=int(input("a quantidade de sucos:"))
var2=int(input("a quantidade de salgados:"))
var3=float(input("o valor que voces tem diponivel:"))
x=3
y=3,50
if(var1)+(var2):
	msg="Sim"
else:
	msg=
print(round(msg, 2))

-- ERROR:
File "XXXX", line 9
    msg=
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:45:43) 
-- CODE:
var1=int(input("a quantidade de sucos:"))
var2=int(input("a quantidade de salgados:"))
var3=float(input("o valor que voces tem diponivel:"))
x=3
y=3,50
if(var1)+(var2):
	msg="Sim"
else:
	msg=
print(round(msg, 2))

-- ERROR:
File "XXXX", line 9
    msg=
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
